--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@types/d3": "^7.4.0",
     "@types/validator": "^13.7.10",
+    "chart.js": "^4.2.1",
     "class-validator": "^0.14.0",
+    "d3": "^7.8.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
